# concurrent_calculator

./: .gitignore  CMakeLists.txt
include/: Calculator.h  Logger.h  ThreadPoolWrapper.h
src/: Calculator.cpp  Logger.cpp  ThreadPoolWrapper.cpp  main.cpp
